--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,8 @@ install:
   - pip install -r requirements.txt
   - pip install -q pytest pytest-cov coveralls
 cache: pip
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 5 # give the virtual display time to boot up
 script:
-  - pytest --cov=prysm tests/
+  - pytest
 notifications:
   email: false
 after_success:
