--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ install:
   - pip install -r requirements.txt
   - pip install -q pytest pytest-cov coveralls
 cache: pip
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 5 # give the virtual display time to boot up
 script:
-  - pytest
+  - pytest --cov=prysm tests/
 notifications:
   email: false
 after_success:
