--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,26 @@
 [metadata]
-description-file = README.md
 name = prysm
-version = 0.14
-author = brandon Dube
+version = 0.15
+author = Brandon Dube
 author-email = brandon@retrorefractions.com
 home-page = prysm.readthedocs.io
-description = prysm, a python optics module
+description = a python optics module
 long-description = file: README.md
-license = MIT
-license-file = LICENSE.md
+license = file: LICENSE.md
 platform = any
 keywords =
+    optics
+    wavefront
+    numerical propagation
+    geometrical optics
+    psf
+    mtf
+    interferogram
+    pupil
+    aberration
+    imaging
+    simulation
+    slanted-edge
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Science/Research
@@ -26,17 +36,26 @@ python_requires = >= 3.6
 tests_require = pytest
 test_suite = tests
 setup_requires = setuptools >= 38.3.0
-install_requires = numpy, scipy
+install_requires =
+    numpy
+    scipy
 
-[options.extra.requires]
-cpu+ = numba
+[options.extras_require]
+cpu = numba
 cuda = cupy
 Mx = h5py
 img = imageio
-mtf+ = pandas
+mtf = pandas
 deconv = scikit-image
 plotting = matplotlib
-deluxe = numba, cupy, h5py, imageio, pandas, scikit-image
+deluxe =
+    numba
+    cupy
+    h5py
+    imageio
+    pandas
+    scikit-image
+    matplotlib
 
 [options.packages.find]
 exclude = tests/, docs
