--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,12 @@ target/
 .pypirc
 .idea
 .ropeproject
-Examples/testing.ipynb
 
 .DS_store
+
+# sample data
+prysm/sampledata/*
+
+# testing files
+Examples/testing.ipynb
+**/Untitled.ipynb
