update license to make some choosy versions of pip happy, add imagieo and pandas to rtd env

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author-email = brandon@retrorefractions.com
 home-page = prysm.readthedocs.io
 description = a python optics module
 long-description = file: README.md
-license = file: LICENSE.md
+license = MIT
 platform = any
 keywords =
     optics
