--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,25 @@
 language: python
-python:
-  - "3.6"
+before_install:
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
 install:
-  - pip install -q --force-reinstall pytest==4.1.1 pytest-cov==2.6.1 coveralls numpy scipy matplotlib imageio
+  - conda create -n prysmci --yes python=3.7
+  - source activate prysmci
+  - >-
+      conda install --yes
+      numpy>=1.15
+      scipy>=1.2
+      matplotlib>=3.0
+      imageio
+      pandas
+      h5py
+      pytest=4.2.1
+      pytest-cov=2.6.1
+      coveralls=1.5.1
   - python setup.py install
-cache: pip
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
