--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
   - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda/bin:$PATH
+  - export PATH=/home/travis/miniconda3/bin:$PATH
 install:
-  - conda create -n prysmci --yes python=3.7
+  - conda create -n prysmci python=3.7 --yes
   - source activate prysmci
   - >-
       conda install --yes
