--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = prysm
-version = 0.15
 author = Brandon Dube
 author-email = brandon@retrorefractions.com
 home-page = prysm.readthedocs.io
@@ -35,7 +34,9 @@ packages = prysm
 python_requires = >= 3.6
 tests_require = pytest
 test_suite = tests
-setup_requires = setuptools >= 38.3.0
+setup_requires =
+    setuptools >= 38.3.0
+    setuptools_scm
 install_requires =
     numpy
     scipy
