--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 prune *
-recursive-include prysm/*.py
 exclude readthedocs-env.yml
 exclude readthedocs.yml
+graft prysm
+prune prysm/__pycache__
+prune prysm/sampledata
