--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author = Brandon Dube
 author-email = brandon@retrorefractions.com
 home-page = prysm.readthedocs.io
 description = a python optics module
+packages = prysm
 long-description = file: README.md
 license = MIT
 platform = any
@@ -29,7 +30,7 @@ classifiers =
 
 [options]
 zip_safe = true
-include_package_date = true
+include_package_data = true
 packages = prysm
 python_requires = >= 3.6
 tests_require = pytest
