fix homepage in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = prysm
 author = Brandon Dube
 author-email = brandon@retrorefractions.com
-home-page = prysm.readthedocs.io
+home-page = http://prysm.readthedocs.io
 description = a python optics module
 packages = prysm
 long-description = file: README.md
