dev option for installer to bring pytest and sphinx stuff

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,16 @@ deluxe =
     pandas
     scikit-image
     matplotlib
+dev =
+    numba
+    h5py
+    imageio
+    pandas
+    scikit-image
+    matplotlib
+    pytest
+    sphinx
+    nbsphinx
 
 [options.packages.find]
 exclude = tests/, docs
