--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,5 +4,5 @@ python:
   version: 3.7
   install:
     - requirements: docs/requirements.txt
-    - method: pip
+    - method: setuptools
       path: .
