--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,7 +4,7 @@
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = python -msphinx
-SPHINXPROJ    = code6
+SPHINXPROJ    = prysm
 SOURCEDIR     = source
 BUILDDIR      = build
 
