--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,8 @@ install:
       pytest-cov=2.6.1
       coveralls=1.5.1
   - pip install .
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 5 # give the virtual display time to boot up
+services:
+  - xvfb
 script:
   - pytest --cov=prysm tests/
 notifications:
