--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 
 [options]
 zip_safe = true
@@ -51,7 +52,7 @@ exclude = tests/, docs
 universal = true
 
 [sdist]
-formats = zip, gztar
+formats = gztar
 
 [flake8]
 max-line-length = 120
