--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 install:
   - conda create -n prysmci python=3.7 --yes
   - source activate prysmci
+  - conda config --add channels conda-forge
   - >-
       conda install --yes
       numpy>=1.15
