--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,7 @@
-setuptools==41.0.1
+setuptools==58.0.4
 sphinx==2.0.1
-pandoc
-nbconvert
+nbconvert==6.1.0
 ipykernel
-nbsphinx
-scikit-image
-imageio
+nbsphinx==0.8.7
+scikit-image==0.18.1
+imageio==2.9.0
