pyproject.toml: tweak coverage.py settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ python = "^3.10"
 numpy = "^1.26.4"
 
 [tool.coverage.run]
-source = "prysm"
+source = ["prysm/*"]
+omit = ["prysm/x/*"]
 
 [tool.coverage.report]
 # Regexes for lines to exclude from consideration
