--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,8 +1,10 @@
 version: 2
 build:
   image: latest
+  os: ubuntu-lts-latest
+  tools:
+    python: "3.11"
 python:
-  version: 3.11
   install:
     - requirements: docs/requirements.txt
     - method: pip
