--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ version = "0.22"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-numpy = "^1.26.4"
+numpy = ">=1,<3"
+h5py = '*'
+scipy = '*'
 
 [tool.coverage.run]
 include = ["prysm/*",]
