rtd: bump python version, add sphinx config path

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -2,9 +2,11 @@ version: 2
 build:
   os: ubuntu-lts-latest
   tools:
-    python: "3.12"
+    python: "3.14"
 python:
   install:
     - requirements: docs/requirements.txt
     - method: pip
       path: .
+sphinx:
+  configuration: docs/source/conf.py
