--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,9 @@ name = "prysm"
 version = "0.22"
 license = "MIT"
 description = "physical optics integrated modeling, phase retrieval, segmented systems, polynomials and fitting, sequential raytracing..."
-authors = ["Brandon Dube <brandon@retrorefractions.com>"]
+authors = [
+{name = "Brandon Dube email = brandon@retrorefractions.com"},
+]
 
 dependencies = [
     "numpy",
