--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
     # A list of available CircleCI Docker convenience images are available here: https://circleci.com/developer/images/image/cimg/python
     # The executor is the environment in which the steps below will be executed - below will use a python 3.9 container
     # Change the version below to your required version of python
-    resource_class: medium
+    resource_class: small
     docker:
       - image: cimg/python:3.14
     # Checkout the code as the first step. This is a dedicated CircleCI step.
